fix nav spacing on mobile

--- a/docs/fncss.css
+++ b/docs/fncss.css
@@ -2,6 +2,10 @@
     cursor: pointer;
 }
 
+.fn-nav .nav-link {
+    padding: 10px;
+}
+
 .noselect {
     -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
